main page css aligning issue

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -5,3 +5,4 @@
   .features
     .feature
       text-align center
+      margin 0 auto
